<resources>
    <string name="app_name" translatable="false">Password Manager</string>

    <string name="no_password">Aggiungi nuova Password</string>

    <string name="no_find_result">Nessun risultato</string>

    <string-array name="entries_secretQuestion">
        <item>Qual è il nome del tuo animale domestico?</item>
        <item>Il nome della via in cui sei cresciuto?</item>
        <item>Il nome del tuo amico di infanzia?</item>
        <item>Qual è il tuo film preferito?</item>
    </string-array>

    <string-array name="filter_order">
        <item name="filter_domain">@string/filter_spinner_orderby_dominio</item>
        <item name="filter_username">@string/filter_spinner_orderby_username</item>
    </string-array>

    <string-array name="filter_sorting">
        <item name="filter_ascending">@string/filter_spinner_sorting_ascendent</item>
        <item name="filter_descending">@string/filter_spinner_sorting_descendent</item>
    </string-array>


    <!--> GENERIC STRING RESOURCE  </!-->
    <string name="generic_cancelMessage">Annulla</string>
    <string name="generic_deleteMessage">Elimina</string>
    <string name="generic_createMessage">Crea</string>
    <string name="generic_accessMessage">Accedi</string>
    <string name="generic_refreshMessage">Aggiorna</string>
    <string name="generic_resetMessage">Resetta</string>
    <string name="generic_confirmMessage">Conferma</string>


    <!--> RESOURCES FOR FINGERPRINT  </!-->
    <string name="fingerprint_error">Errore di autenticazione</string>
    <string name="fingerprint_fail">Impronta non registrata</string>

    <string name="fingerprint_supportError">Il tuo dispositivo non supporta il riconoscimento delle impronte digitali.</string>
    <string name="fingerprint_permissionError">Abilita il riconoscimento delle impronte, nelle impostazioni del dispositivo.</string>
    <string name="fingerprint_noOneExist">Nessuna impronta registrata. Registrane una nelle impostazioni del dispositivo.</string>
    <string name="fingerprint_enableLockScreen">Abilita la schermata di blocco con riconoscimento delle impronte.</string>

    <!--> HOME ACTIVITY  </!-->
    <string name="home_deletePassword_title">Elimina Password</string>
    <string name="home_searchBar_hint">Cerca</string>
    <string name="home_category_text">Categoria:</string>
    <string name="home_anyPassword">Nessuna Password</string>

    <!--> MANAGE CATEGORY ACTIVITY  </!-->
    <string name="category_title">Modifica Categorie</string>
    <string name="category_add_hint">Category Name</string>

    <!--> ADD PASSWORD ACTIVITY  </!-->
    <string name="password_title">Nuova Password</string>
    <string name="password_domain_hint">Dominio</string>
    <string name="password_username_hint">Username</string>
    <string name="password_password_hint">Password</string>

    <!--> MANAGE PASSWORD ACTIVITY  </!-->
    <string name="managePassword_title">Modifica Password</string>

    <!--> RECOVER PIN ACTIVITY  </!-->
    <string name="recoverpin_title">Domanda Segreta</string>
    <string name="recoverpin_answare_hint">Risposta</string>
    <string name="recoverpin_newPin_hint">Nuovo Pin</string>
    <string name="recoverpin_confirmPin_hint">Conferma Pin</string>

    <!--> SETTINGS ACTIVITY  </!-->
    <string name="setting_button_resetPin">Resetta Pin</string>
    <string name="setting_button_changeColorTheme">Cambia Tema</string>
    <string name="setting_button_export">Esporta Password</string>
    <string name="setting_oldpin_hint">Vecchio PIN</string>
    <string name="setting_newpin_hint">Nuovo PIN</string>
    <string name="setting_button_import">Importa Password da File</string>
    <string name="filter_order_text">Ordina per:</string>
    <string name="filter_sorting_text">Ordinamento</string>
    <string name="generic_applyMessage">Applica</string>
    <string name="filter_spinner_orderby_dominio">Dominio</string>
    <string name="filter_spinner_orderby_username">Username</string>
    <string name="filter_spinner_sorting_ascendent">Ascendente</string>
    <string name="filter_spinner_sorting_descendent">Discendente</string>
    <string name="filter_alert_title">Resetta Filtri</string>
    <string name="filter_alert_message">Questa operazione è irreversibile.</string>
    <string name="tutorial_home_findbar_message">Questa è la barra di ricerca. Inserisci qui la parola chiave.</string>
    <string name="generic_tutorial_confirmButton">CAPITO</string>
    <string name="tutorial_home_category_message">Qui puoi scegliere la categoria da visualizzare.</string>
    <string name="tutorial_home_category_title">Filtra, Categorie, Password, Impostazioni</string>
    <string name="tutorial_home_findbar_title">Barra di ricerca</string>
    <string name="menu_filter_title">Filtri</string>
    <string name="menu_category_title">Modifica Categorie</string>
    <string name="menu_password_title">Aggiungi Password</string>
    <string name="menu_settings_title">Impostazioni</string>
    <string name="setting_button_exportTXT">Condividi Password (CSV)</string>
    <string name="setting_alert_import_title">Importa Database da File</string>
    <string name="setting_alert_import_message">Attenzione! questa operazione è irreversibile. Cancellerà il database esistente!</string>
    <string name="generic_yesMessage">OK</string>
    <string name="tutorial_setting_btnResetPin_title">Resetta PIN</string>
    <string name="tutorial_setting_btnResetPin_message">Questo pulsante ti permette di resettare il vecchio pin con uno nuovo.</string>
    <string name="tutorial_setting_btnChangeTheme_title">Cambia Tema</string>
    <string name="tutorial_setting_btnChangeTheme_message">Questo pulsante ti permette di cambiare il tema dell\'applicazione. Scegli il tuo preferito!</string>
    <string name="tutorial_setting_btnExport_title">Salva Database</string>
    <string name="tutorial_setting_btnExport_message">Salvando il database dell\'applicazione potrai avere le tue password sincronizzate su un altro dispositivo.</string>
    <string name="tutorial_setting_btnImport_title">Importa Database</string>
    <string name="tutorial_setting_btnImport_message">Importa il database da un file. Attenzione questa operazione cancellerà il database corrente. Assicurati di averlo salvato!</string>
    <string name="tutorial_setting_btnShare_title">Condividi Password</string>
    <string name="tutorial_setting_btnShare_message">Puoi condividere tutte le password che hai salvato con un tuo contatto. Attenzione non condividere questo file con persone sconosciute.</string>
    <string name="setting_btnTuttorial">Tutorial</string>
    <string name="setting_alert_pinUpdated">PIN Aggiornato</string>
    <string name="setting_alert_pinNotUpdated">PIN non aggiornato</string>
    <string name="category_moveButton">Sposta</string>
    <string name="category_alert_move_title">Sposta password</string>
    <string name="category_alert_move_message">Attenzione! Questa operazione è irreversibile. Tutte le password verranno spostate!</string>
    <string name="category_moveText">Sposta in</string>
    <string name="setting_button_importTXT">Importa Password (CSV)</string>


</resources>
