<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="reti.com.passwordmanager.RecoveryPin">

    <TextView
        android:id="@+id/labelDomandaSegreta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/recoverpin_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_domandaSegreta"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="@+id/labelDomandaSegreta"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDomandaSegreta"
        tools:text="Domanda" />

    <EditText
        android:id="@+id/et_rispostaSegreta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/recoverpin_answare_hint"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/iv_secretAnsware"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_domandaSegreta" />

    <Button
        android:id="@+id/bt_inviaRispostaSegreta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/generic_resetMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmPin" />

    <EditText
        android:id="@+id/et_confirmPin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/recoverpin_confirmPin_hint"
        android:inputType="numberPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/iv_confirmPinRecovery"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_newPin" />

    <EditText
        android:id="@+id/et_newPin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/recoverpin_newPin_hint"
        android:inputType="numberPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/iv_newPinRecovery"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rispostaSegreta" />

    <ImageView
        android:id="@+id/iv_newPinRecovery"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_unchecked"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_newPin"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_newPin"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.666" />

    <ImageView
        android:id="@+id/iv_confirmPinRecovery"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_unchecked"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_confirmPin"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_confirmPin"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/iv_secretAnsware"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ic_unchecked"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_rispostaSegreta"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_rispostaSegreta"
        android:layout_marginBottom="8dp" />
</android.support.constraint.ConstraintLayout>
